# TransazioniFinanziarie

./: CMakeLists.txt
include/: GestoreTransazioni.h  Ingresso.h  Transazione.h  Uscita.h
src/: GestoreTransazioni.cpp  Ingresso.cpp  Transazione.cpp  Uscita.cpp  main.cpp
tests/: Test.cpp
